--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
-    <link rel="icon" href="./public/favicon/paw.png" type="image/png">
+
+    <link rel="icon" href="./public/favicon/paw.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>meowmory</title>
   </head>
